@@ -19,16 +19,16 @@ public class ConfigDefaults {
     public static final boolean DEFAULT_ENABLE_HISTORY = true;
     public static final boolean DEFAULT_ENABLE_TOOL_CALL = true;
     public static final boolean DEFAULT_ENABLE_BROADCAST = false;
-    public static final int DEFAULT_HISTORY_RETENTION_DAYS = 30;
+    public static final boolean DEFAULT_ENABLE_CHAT_INTEGRATION = true;
+    public static final String DEFAULT_DEFAULT_CHAT_MODE = "OFF";
+    public static final boolean DEFAULT_ENABLE_EXECUTE_COMMAND = true;
+    public static final boolean DEFAULT_EXECUTE_COMMAND_RETURN_FULL_OUTPUT = true;
+    public static final int DEFAULT_EXECUTE_COMMAND_MAX_LENGTH = 256;
     
     // 上下文压缩配置默认值
     public static final String DEFAULT_COMPRESSION_MODEL = ""; // 空字符串表示使用当前模型
     public static final boolean DEFAULT_ENABLE_COMPRESSION_NOTIFICATION = true;
 
-    // 消息预览配置默认值
-    public static final int DEFAULT_MESSAGE_PREVIEW_COUNT = 5; // 恢复对话时显示的消息数量
-    public static final int DEFAULT_MESSAGE_PREVIEW_MAX_LENGTH = 150; // 每条消息的最大显示长度
-    
     // 全局上下文配置默认值
     public static final boolean DEFAULT_ENABLE_GLOBAL_CONTEXT = true;
     public static final String DEFAULT_GLOBAL_CONTEXT_PROMPT =
@@ -44,14 +44,17 @@ public class ConfigDefaults {
 
     // Wiki API 配置默认值
     public static final String DEFAULT_WIKI_API_URL = "https://mcwiki.rice-awa.top";
+    public static final Set<String> DEFAULT_WIKI_ALLOWED_HOSTS = Set.of("mcwiki.rice-awa.top");
 
     // 多轮工具调用配置默认值
     public static final boolean DEFAULT_ENABLE_RECURSIVE_TOOL_CALLS = true;
     public static final int DEFAULT_MAX_TOOL_CALL_DEPTH = 25;
-    public static final int DEFAULT_TOOL_CALL_TIMEOUT_MS = 30000; // 30秒
 
     // API密钥占位符（用于检测无效密钥）
     public static final String API_KEY_PLACEHOLDER = "your-api-key-here";
+    public static final String DEFAULT_PROVIDER_PROTOCOL = "openai-compatible";
+    public static final String ANTHROPIC_PROVIDER_PROTOCOL = "anthropic";
+    public static final String GOOGLE_PROVIDER_PROTOCOL = "google";
 
     // 空字符串默认值（用于Provider和Model）
     public static final String EMPTY_STRING = "";
@@ -61,53 +64,13 @@ public class ConfigDefaults {
      */
     public static List<Provider> createDefaultProviders() {
         List<Provider> providers = new ArrayList<>();
-        
-        // OpenAI Provider
-        providers.add(new Provider(
-            "openai",
-            "https://api.openai.com/v1",
-            API_KEY_PLACEHOLDER,
-            List.of("gpt-3.5-turbo", "gpt-4", "gpt-4-turbo", "gpt-4o", "gpt-4o-mini")
-        ));
-        
-        // OpenRouter Provider
-        providers.add(new Provider(
-            "openrouter", 
-            "https://openrouter.ai/api/v1",
-            API_KEY_PLACEHOLDER,
-            List.of(
-                "anthropic/claude-3.5-sonnet",
-                "google/gemini-2.5-pro-preview", 
-                "anthropic/claude-sonnet-4",
-                "openai/gpt-4o",
-                "meta-llama/llama-3.1-405b-instruct"
-            )
-        ));
-        
-        // DeepSeek Provider
-        providers.add(new Provider(
-            "deepseek",
-            "https://api.deepseek.com/v1", 
-            API_KEY_PLACEHOLDER,
-            List.of("deepseek-chat", "deepseek-reasoner")
-        ));
-        
-        // Anthropic Provider
-        providers.add(new Provider(
-            "anthropic",
-            "https://api.anthropic.com/v1",
-            API_KEY_PLACEHOLDER,
-            List.of("claude-3.5-sonnet", "claude-3-opus", "claude-3-haiku")
-        ));
-        
-        // Google AI Provider
-        providers.add(new Provider(
-            "google",
-            "https://generativelanguage.googleapis.com/v1beta",
-            API_KEY_PLACEHOLDER,
-            List.of("gemini-2.5-pro-preview", "gemini-1.5-pro", "gemini-1.5-flash")
-        ));
-        
+        Provider openai = new Provider();
+        openai.setName("openai");
+        openai.setProtocol(DEFAULT_PROVIDER_PROTOCOL);
+        openai.setApiBaseUrl("https://api.openai.com/v1");
+        openai.setApiKey(API_KEY_PLACEHOLDER);
+        openai.setModels(java.util.Arrays.asList("gpt-4o", "gpt-4o-mini"));
+        providers.add(openai);
         return providers;
     }
     
@@ -116,6 +79,17 @@ public class ConfigDefaults {
      */
     public static Set<String> createDefaultBroadcastPlayers() {
         return new HashSet<>();
+    }
+
+    public static Set<String> createDefaultWikiAllowedHosts() {
+        return new HashSet<>(DEFAULT_WIKI_ALLOWED_HOSTS);
+    }
+
+    /**
+     * 创建默认的可执行命令允许列表。
+     */
+    public static Set<String> createDefaultExecuteCommandBlocklist() {
+        return new HashSet<>(Set.of("ban", "ban-ip", "deop", "kick", "op", "pardon", "reload", "stop", "whitelist"));
     }
     
     /**
@@ -146,6 +120,11 @@ public class ConfigDefaults {
             case "enableHistory": return "启用历史记录";
             case "enableToolCall": return "启用工具调用";
             case "enableBroadcast": return "启用广播";
+            case "enableChatIntegration": return "启用聊天集成";
+            case "defaultChatMode": return "默认聊天模式";
+            case "enableExecuteCommand": return "启用命令执行";
+            case "executeCommandReturnFullOutput": return "命令执行返回完整输出";
+            case "executeCommandMaxLength": return "命令执行最大长度";
             case "compressionModel": return "压缩模型";
             case "enableCompressionNotification": return "启用压缩通知";
             case "enableGlobalContext": return "启用全局上下文";
@@ -175,10 +154,10 @@ public class ConfigDefaults {
                 }
                 return false;
 
-            case "historyRetentionDays":
+            case "executeCommandMaxLength":
                 if (value instanceof Number) {
-                    int days = ((Number) value).intValue();
-                    return days >= 1 && days <= 365; // 1天到1年
+                    int num = ((Number) value).intValue();
+                    return num > 0 && num <= DEFAULT_EXECUTE_COMMAND_MAX_LENGTH;
                 }
                 return false;
 
@@ -200,9 +179,12 @@ public class ConfigDefaults {
             case "enableToolCall": return DEFAULT_ENABLE_TOOL_CALL;
             case "enableRecursiveToolCalls": return DEFAULT_ENABLE_RECURSIVE_TOOL_CALLS;
             case "maxToolCallDepth": return DEFAULT_MAX_TOOL_CALL_DEPTH;
-            case "toolCallTimeoutMs": return DEFAULT_TOOL_CALL_TIMEOUT_MS;
             case "enableBroadcast": return DEFAULT_ENABLE_BROADCAST;
-            case "historyRetentionDays": return DEFAULT_HISTORY_RETENTION_DAYS;
+            case "enableChatIntegration": return DEFAULT_ENABLE_CHAT_INTEGRATION;
+            case "defaultChatMode": return DEFAULT_DEFAULT_CHAT_MODE;
+            case "enableExecuteCommand": return DEFAULT_ENABLE_EXECUTE_COMMAND;
+            case "executeCommandReturnFullOutput": return DEFAULT_EXECUTE_COMMAND_RETURN_FULL_OUTPUT;
+            case "executeCommandMaxLength": return DEFAULT_EXECUTE_COMMAND_MAX_LENGTH;
             case "compressionModel": return DEFAULT_COMPRESSION_MODEL;
             case "enableCompressionNotification": return DEFAULT_ENABLE_COMPRESSION_NOTIFICATION;
             case "enableGlobalContext": return DEFAULT_ENABLE_GLOBAL_CONTEXT;
@@ -210,6 +192,7 @@ public class ConfigDefaults {
             case "enableTitleGeneration": return DEFAULT_ENABLE_TITLE_GENERATION;
             case "titleGenerationModel": return DEFAULT_TITLE_GENERATION_MODEL;
             case "wikiApiUrl": return DEFAULT_WIKI_API_URL;
+            case "wikiAllowedHosts": return createDefaultWikiAllowedHosts();
             case "currentProvider": return EMPTY_STRING;
             case "currentModel": return EMPTY_STRING;
             default: return null;
